fix collapse

--- a/src/components/card/_Card.scss
+++ b/src/components/card/_Card.scss
@@ -1,9 +1,13 @@
 .card {
      height: 338px;
      max-width: 338px;
-     transition: transform 0.2s;
-     &:hover {
-        transform: scale(1.035);
+     @media screen and (min-width: $breakpoint-desktop) {
+          transition: transform 0.2s;
+          &:hover {
+             transform: scale(1.035);
+      
+           
+         }
     
 }
     
