--- a/src/components/collapse/_Collapse.scss
+++ b/src/components/collapse/_Collapse.scss
@@ -8,6 +8,7 @@
 
     &__title {
         margin: auto;
+        margin-top: 10px;
         max-width: 1023px;
         height: 47px;
         background-color: $primary-color;
@@ -39,8 +40,10 @@
     }
 
     &__text {
-        margin: auto;
-        padding: 8px 9px 1px;
+        margin: auto ;
+        
+        display: none;
+        padding: 15px 9px 0px;
         max-height: 0;
         overflow: hidden;
         opacity: 0;
@@ -54,10 +57,7 @@
         @media screen and (max-width: $breakpoint-desktop) {
             min-width: 50%;
         }
-         p {
-
-            margin: 1.5% 0;
-         }
+        
        
         transition: max-height 0.4s ease, opacity 0.4s ease;
 
@@ -66,9 +66,14 @@
         }
         
         &.show {
-            max-height: 300px;
+            padding-bottom: 20px;
+            display: flex;
+            max-height: 400px;
             opacity: 1;
             margin-bottom: 20px;
+            // min-height: 180px;
+            // width: fit-content;
+            height: fit-content;
         }
     }
 }
