--- a/src/components/ficheLogement/_ficheLogement.scss
+++ b/src/components/ficheLogement/_ficheLogement.scss
@@ -15,10 +15,14 @@
   
   &__collapse {
    display: flex; 
+   max-height: 400px;
   justify-content: space-between;
   // gap: 10px; 
   width: 100%;
   flex-wrap: wrap; 
+  span{
+    padding: 0;
+  }
 
   &___left, 
   &___right {
@@ -26,11 +30,26 @@
     max-width: 48%; 
     min-width: 45%; 
     box-sizing: border-box;
+  &__equipments {
+    height: 3vh;
+  }
+  }
   }
 p {
   font-size: 18px;
+  // padding: 10px ;
+  margin: 0;
+  text-align: left;
+  // height: 200px;
 }
+ul{
+  margin: 0 0 5px;
 }
 }
 
 
+
+.text-equipements{
+ margin-top: 10px !important;
+ padding: 0 !important;
+}
